<resources>
    <string name="app_name">GoogleTasksAssistant</string>
    <string name="place_holder">Place Holder</string>
    <string name="checkbox">CheckBox</string>
    <string name="delete_button">Bin</string>
    <string name="open_nav">Open Navigation Drawer</string>
    <string name="close_nav">Close Navigation Drawer</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="due_time_place_holder">dueTime</string>
    <string name="name_place_holder">name</string>
    <string name="new_tag_button_text">Add Tag</string>
    <string name="new_tag_button">New Tag</string>
    <string name="tag_back_button">back to main task list</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="open_drawer">Open Menu</string>
    <string name="search">search</string>
    <string name="sort_button">Sort</string>
    <string name="signed_out_account">Not Linked</string>
    <string name="signed_out_button">Link Account</string>
    <string name="signed_in_button">Unlink Account</string>
    <string name="cancel_choose_time">Leave Time Blank</string>
    <string name="confirm_choose_time">OK</string>
    <string name="menu">Drawer Menu</string>
    <string name="settings_title">Settings</string>

    <string-array name="theme_options">
        <item>System Default</item>
        <item>Light</item>
        <item>Dark</item>
    </string-array>
</resources>