<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    android:id="@+id/taskCellContainer"
    app:cardCornerRadius="5dp"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="5dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:paddingVertical="1dp">

            <ImageButton
                android:id="@+id/completeButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:scaleX="1.5"
                android:scaleY="1.5"
                android:contentDescription="@string/checkbox"
                android:layout_marginHorizontal="15dp"
                android:src="@drawable/unchecked_24"
                android:backgroundTint="@android:color/transparent"
                />

            <TextView
                android:id="@+id/name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/name_place_holder"
                style="@style/TextAppearance.AppCompat.Title"
                android:layout_gravity="center"
                android:layout_weight="1"
                />

            <TextView
                android:id="@+id/dueTime"
                android:layout_marginHorizontal="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/due_time_place_holder"
                style="@style/TextAppearance.AppCompat.Title"
                android:layout_gravity="center"
                />

            <ImageButton
                android:id="@+id/deleteButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:scaleX="1"
                android:scaleY="1"
                android:contentDescription="@string/delete_button"
                android:layout_marginHorizontal="15dp"
                android:src="@drawable/baseline_delete_24"
                android:backgroundTint="@android:color/transparent"
                />

        </LinearLayout>

        <com.google.android.flexbox.FlexboxLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:scaleX="0.7"
            android:scaleY="0.7">

            <com.google.android.flexbox.FlexboxLayout
                android:id="@+id/tagLayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:scaleX="0.7"
                android:scaleY="0.7">

            </com.google.android.flexbox.FlexboxLayout>

            <Button
                android:id="@+id/addTagButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/new_tag_button_text"
                android:drawableLeft="@drawable/baseline_add_24"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:padding="1dp" />

        </com.google.android.flexbox.FlexboxLayout>

    </LinearLayout>

</androidx.cardview.widget.CardView>